deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
   # team: devops   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
        team: devops   
    spec:
      containers:
        - name: django
          image: django-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:   
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
