ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer

spec:
  tls:
    - hosts:
        - django.local
      secretName: django-tls

  rules:
    - host: django.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
